--- a/REST/appsettings.json
+++ b/REST/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "staff-tool",
+    "CollectionName": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
