--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 *.userprefs
 
 # Local Settings
-local.settings.json
+appsettings.json
+appsettings.Development.json
 
 # Mono auto generated files
 mono_crash.*
