Created Repository and TournamentRepository

--- a/REST/REST.csproj
+++ b/REST/REST.csproj
@@ -12,4 +12,12 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\oTSPA.Domain.Mongo\oTSPA.Domain.Mongo.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\Interfaces\" />
+    </ItemGroup>
+
 </Project>
