--- a/Domain/oTSPA.Domain.Mongo/oTSPA.Domain.Mongo.csproj
+++ b/Domain/oTSPA.Domain.Mongo/oTSPA.Domain.Mongo.csproj
@@ -10,11 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\Interfaces\" />
   </ItemGroup>
 
 </Project>
