--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -9,6 +9,11 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.10.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\oTSPA.Domain.Mongo\oTSPA.Domain.Mongo.csproj" />
     </ItemGroup>
 
 </Project>
