--- a/BotFunctions/BotFunctions.csproj
+++ b/BotFunctions/BotFunctions.csproj
@@ -7,9 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.8.0" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.0.1" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.13.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.2.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.10.0" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -22,5 +22,10 @@
     </ItemGroup>
     <ItemGroup>
         <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\AppService\oTSPA.AppService.BotFunctions\oTSPA.AppService.BotFunctions.csproj" />
+      <ProjectReference Include="..\Domain\oTSPA.Domain.Data\oTSPA.Domain.Data.csproj" />
+      <ProjectReference Include="..\Domain\oTSPA.Domain.Mongo\oTSPA.Domain.Mongo.csproj" />
     </ItemGroup>
 </Project>
