--- a/AppService/oTSPA.AppService.BotFunctions/oTSPA.AppService.BotFunctions.csproj
+++ b/AppService/oTSPA.AppService.BotFunctions/oTSPA.AppService.BotFunctions.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net.Webhook" Version="3.10.0" />
+      <PackageReference Include="Discord.Net.WebSocket" Version="3.10.0" />
     </ItemGroup>
 
 </Project>
