--- a/BotFunctions/BotFunctions.csproj
+++ b/BotFunctions/BotFunctions.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Discord.Net.WebSocket" Version="3.10.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.13.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.2.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.10.0" />
