--- a/AppService/oTSPA.AppService.BotFunctions/oTSPA.AppService.BotFunctions.csproj
+++ b/AppService/oTSPA.AppService.BotFunctions/oTSPA.AppService.BotFunctions.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="ClosedXML" Version="0.101.0" />
       <PackageReference Include="Discord.Net.Webhook" Version="3.10.0" />
       <PackageReference Include="Discord.Net.WebSocket" Version="3.10.0" />
     </ItemGroup>
