--- a/BotFunctions/BotFunctions.csproj
+++ b/BotFunctions/BotFunctions.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Discord.Net.WebSocket" Version="3.10.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.13.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.2.0" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.10.0" />
     </ItemGroup>
