--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
+      <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0-preview.3.23174.8" />
     </ItemGroup>
 
