--- a/Domain/Tests/Treviso.Domain.Tests.Mongo/Treviso.Domain.Tests.Mongo.csproj
+++ b/Domain/Tests/Treviso.Domain.Tests.Mongo/Treviso.Domain.Tests.Mongo.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Treviso.Domain.Mongo\Treviso.Domain.Mongo.csproj" />
+    <ProjectReference Include="..\..\Treviso.Domain.Sql\Treviso.Domain.Sql.csproj" />
   </ItemGroup>
 
 </Project>
