--- a/Domain/Treviso.Domain.Sql/Treviso.Domain.Sql.csproj
+++ b/Domain/Treviso.Domain.Sql/Treviso.Domain.Sql.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Treviso.Domain.Mongo</RootNamespace>
+    <RootNamespace>Treviso.Domain.Sql</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
